[package]
name = "crontime"
version = "0.3.0"
edition = "2021"
rust-version = "1.60"
authors = ["Lucas Sunsi Abreu <lsunsi@pm.me>"]
description = "cron expression -> time iterator"
categories = ["parser-implementations", "date-and-time"]
keywords = ["cron", "parser", "time"]
repository = "https://github.com/lsunsi/crontime"
homepage = "https://github.com/lsunsi/crontime"
license = "GPL-3.0-only"
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
bitvec = { version = "1.0.0", default-features = false }
nom = { version = "7.0.0", features = ["alloc"], default-features = false }
time = { version = "0.3.0", default-features = false }

[dev-dependencies]
time = { version = "0.3.0", features = ["macros"], default-features = false }

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
